safety check in

--- a/AirBnB-BCN/AirBnB-BCN-July2019Extract-Analysis.ipynb
+++ b/AirBnB-BCN/AirBnB-BCN-July2019Extract-Analysis.ipynb
@@ -10,8 +10,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import r2_score, mean_squared_error\n",
+    "import seaborn as sns\n",
+    "%matplotlib inline\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df_lisFull = pd.read_csv('./data/listings.csv.gz', compression='gzip')\n",
+    "#df_lis = pd.read_csv('./data/listings.csv')\n",
+    "#df_nei = pd.read_csv('./data/neighbourhoods.csv')\n",
+    "#df_ref = pd.read_csv('./data/reviews.csv')\n",
+    "#df_refFull = pd.read_csv('./data/reviews.csv.gz', compression='gzip')\n",
+    "#df_geo = pd.read_json('./data/neighbourhoods.geojson')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -64,36 +96,6 @@
        "      <td>3</td>\n",
        "      <td>730</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>18666</td>\n",
-       "      <td>2019-07-11</td>\n",
-       "      <td>f</td>\n",
-       "      <td>$130.00</td>\n",
-       "      <td>$130.00</td>\n",
-       "      <td>3</td>\n",
-       "      <td>730</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>18666</td>\n",
-       "      <td>2019-07-12</td>\n",
-       "      <td>f</td>\n",
-       "      <td>$130.00</td>\n",
-       "      <td>$130.00</td>\n",
-       "      <td>3</td>\n",
-       "      <td>730</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>18666</td>\n",
-       "      <td>2019-07-13</td>\n",
-       "      <td>f</td>\n",
-       "      <td>$130.00</td>\n",
-       "      <td>$130.00</td>\n",
-       "      <td>3</td>\n",
-       "      <td>730</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -102,151 +104,10 @@
        "   listing_id        date available    price adjusted_price  minimum_nights  \\\n",
        "0       31380  2019-07-10         f   $75.00         $75.00               3   \n",
        "1       18666  2019-07-10         f  $130.00        $130.00               3   \n",
-       "2       18666  2019-07-11         f  $130.00        $130.00               3   \n",
-       "3       18666  2019-07-12         f  $130.00        $130.00               3   \n",
-       "4       18666  2019-07-13         f  $130.00        $130.00               3   \n",
        "\n",
        "   maximum_nights  \n",
        "0            1125  \n",
-       "1             730  \n",
-       "2             730  \n",
-       "3             730  \n",
-       "4             730  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import r2_score, mean_squared_error\n",
-    "import seaborn as sns\n",
-    "%matplotlib inline\n",
-    "\n",
-    "df = pd.read_csv('./data/calendar.csv.gz', compression='gzip')\n",
-    "df.head(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(7239045, 7)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>listing_id</th>\n",
-       "      <th>minimum_nights</th>\n",
-       "      <th>maximum_nights</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>7.239045e+06</td>\n",
-       "      <td>7.239045e+06</td>\n",
-       "      <td>7.239045e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>2.095877e+07</td>\n",
-       "      <td>8.785608e+00</td>\n",
-       "      <td>2.172749e+05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>1.140940e+07</td>\n",
-       "      <td>1.813377e+01</td>\n",
-       "      <td>2.156397e+07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>1.866600e+04</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>1.176684e+07</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>6.000000e+01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>2.237577e+07</td>\n",
-       "      <td>3.000000e+00</td>\n",
-       "      <td>1.125000e+03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>3.156051e+07</td>\n",
-       "      <td>4.000000e+00</td>\n",
-       "      <td>1.125000e+03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>3.658276e+07</td>\n",
-       "      <td>9.000000e+02</td>\n",
-       "      <td>2.147484e+09</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         listing_id  minimum_nights  maximum_nights\n",
-       "count  7.239045e+06    7.239045e+06    7.239045e+06\n",
-       "mean   2.095877e+07    8.785608e+00    2.172749e+05\n",
-       "std    1.140940e+07    1.813377e+01    2.156397e+07\n",
-       "min    1.866600e+04    1.000000e+00    1.000000e+00\n",
-       "25%    1.176684e+07    1.000000e+00    6.000000e+01\n",
-       "50%    2.237577e+07    3.000000e+00    1.125000e+03\n",
-       "75%    3.156051e+07    4.000000e+00    1.125000e+03\n",
-       "max    3.658276e+07    9.000000e+02    2.147484e+09"
+       "1             730  "
       ]
      },
      "execution_count": 11,
@@ -255,7 +116,31 @@
     }
    ],
    "source": [
-    "df.describe()"
+    "# load the data\n",
+    "df_cal = pd.read_csv('./data/calendar.csv.gz', compression='gzip')\n",
+    "df_cal.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'dbtypes'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-b0344bb60d8a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf_cal\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdbtypes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   4374\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4375\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4376\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4377\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4378\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'dbtypes'"
+     ]
+    }
+   ],
+   "source": [
+    "df_cal.dbtypes()"
    ]
   },
   {
