safety checkin (ML work)

--- a/Disaster-response-pipelines/notebooks/ETL Pipeline Preparation.ipynb
+++ b/Disaster-response-pipelines/notebooks/ETL Pipeline Preparation.ipynb
@@ -16,25 +16,14 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "'/Users/nomopix/github-repos/DataScienceND-Udacity'"
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import libraries\n",
     "import pandas as pd\n",
     "import os\n",
     "import numpy as np\n",
     "from pandas.api.types import is_string_dtype\n",
-    "import sqlalchemy as sqla\n",
-    "# to find which is the working directory for this file.\n",
-    "os.getcwd()"
+    "import sqlalchemy as sqla\n"
    ]
   },
   {
