--- a/Disaster-response-pipelines/notebooks/ML Pipeline Preparation.ipynb
+++ b/Disaster-response-pipelines/notebooks/ML Pipeline Preparation.ipynb
@@ -14,24 +14,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "[nltk_data] Downloading package punkt to /Users/nomopix/nltk_data...\n[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+    },
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# import libraries\n"
+    "# import libraries\n",
+    "import sqlalchemy as sqla\n",
+    "import pandas as pd\n",
+    "from sklearn import datasets, linear_model\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from matplotlib import pyplot as plt\n",
+    "import nltk\n",
+    "nltk.download('punkt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>id</th>\n      <th>message</th>\n      <th>original</th>\n      <th>genre</th>\n      <th>related</th>\n      <th>request</th>\n      <th>offer</th>\n      <th>aid_related</th>\n      <th>medical_help</th>\n      <th>medical_products</th>\n      <th>...</th>\n      <th>aid_centers</th>\n      <th>other_infrastructure</th>\n      <th>weather_related</th>\n      <th>floods</th>\n      <th>storm</th>\n      <th>fire</th>\n      <th>earthquake</th>\n      <th>cold</th>\n      <th>other_weather</th>\n      <th>direct_report</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2</td>\n      <td>Weather update - a cold front from Cuba that c...</td>\n      <td>Un front froid se retrouve sur Cuba ce matin. ...</td>\n      <td>direct</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n<p>1 rows × 40 columns</p>\n</div>",
+      "text/plain": "   id                                            message  \\\n0   2  Weather update - a cold front from Cuba that c...   \n\n                                            original   genre  related  \\\n0  Un front froid se retrouve sur Cuba ce matin. ...  direct        1   \n\n   request  offer  aid_related  medical_help  medical_products  ...  \\\n0        0      0            0             0                 0  ...   \n\n   aid_centers  other_infrastructure  weather_related  floods  storm  fire  \\\n0            0                     0                0       0      0     0   \n\n   earthquake  cold  other_weather  direct_report  \n0           0     0              0              0  \n\n[1 rows x 40 columns]"
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# load data from database\n",
+    "engine = sqla.create_engine('sqlite:///Disaster-response-pipelines/data/DisasterResponse.db')\n",
+    "df = pd.read_sql_query(\"SELECT * FROM clasified_messages\", engine)\n",
+    "df.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load data from database\n",
-    "engine = create_engine('sqlite:///InsertDatabaseName.db')\n",
-    "df = \n",
-    "X = \n",
-    "Y = "
+    "# features\n",
+    "feature_columns = df.columns[~df.columns.isin(['id','original','genre'])]\n",
+    "X = df[feature_columns]\n",
+    "# target\n",
+    "Y = df['message']"
    ]
   },
   {
@@ -43,11 +86,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "def tokenize(text):\n",
+    "    list_tokens = nltk.word_tokenize(text)\n",
     "    pass"
    ]
   },
@@ -61,11 +105,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pipeline = "
+    "pipeline = tokenize(\"hola caracola\")\n",
+    "pipeline"
    ]
   },
   {
