--- a/Disaster-response-pipelines/notebooks/ML Pipeline Preparation.ipynb
+++ b/Disaster-response-pipelines/notebooks/ML Pipeline Preparation.ipynb
@@ -14,67 +14,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
-     "text": "[nltk_data] Downloading package punkt to /Users/nomopix/nltk_data...\n[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+     "text": "[nltk_data] Downloading package punkt to /Users/nomopix/nltk_data...\n[nltk_data]   Package punkt is already up-to-date!\n[nltk_data] Downloading package wordnet to /Users/nomopix/nltk_data...\n[nltk_data]   Package wordnet is already up-to-date!\n"
     },
     {
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 34,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# import libraries\n",
+    "import re\n",
     "import sqlalchemy as sqla\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from sklearn import datasets, linear_model\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.feature_extraction.text import CountVectorizer, TfidfTransformer\n",
+    "from sklearn.multiclass import OneVsRestClassifier\n",
+    "from sklearn.multioutput import MultiOutputClassifier\n",
+    "from sklearn.svm import LinearSVC\n",
+    "from sklearn.metrics import make_scorer, accuracy_score, f1_score, fbeta_score, classification_report\n",
+    "from scipy.stats import hmean\n",
+    "from scipy.stats.mstats import gmean\n",
     "from matplotlib import pyplot as plt\n",
+    "\n",
     "import nltk\n",
-    "nltk.download('punkt')"
+    "nltk.download('punkt')\n",
+    "nltk.download('wordnet')\n",
+    "\n",
+    "# import os\n",
+    "# os.getcwd()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>id</th>\n      <th>message</th>\n      <th>original</th>\n      <th>genre</th>\n      <th>related</th>\n      <th>request</th>\n      <th>offer</th>\n      <th>aid_related</th>\n      <th>medical_help</th>\n      <th>medical_products</th>\n      <th>...</th>\n      <th>aid_centers</th>\n      <th>other_infrastructure</th>\n      <th>weather_related</th>\n      <th>floods</th>\n      <th>storm</th>\n      <th>fire</th>\n      <th>earthquake</th>\n      <th>cold</th>\n      <th>other_weather</th>\n      <th>direct_report</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2</td>\n      <td>Weather update - a cold front from Cuba that c...</td>\n      <td>Un front froid se retrouve sur Cuba ce matin. ...</td>\n      <td>direct</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n<p>1 rows × 40 columns</p>\n</div>",
-      "text/plain": "   id                                            message  \\\n0   2  Weather update - a cold front from Cuba that c...   \n\n                                            original   genre  related  \\\n0  Un front froid se retrouve sur Cuba ce matin. ...  direct        1   \n\n   request  offer  aid_related  medical_help  medical_products  ...  \\\n0        0      0            0             0                 0  ...   \n\n   aid_centers  other_infrastructure  weather_related  floods  storm  fire  \\\n0            0                     0                0       0      0     0   \n\n   earthquake  cold  other_weather  direct_report  \n0           0     0              0              0  \n\n[1 rows x 40 columns]"
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# load data from database\n",
-    "engine = sqla.create_engine('sqlite:///Disaster-response-pipelines/data/DisasterResponse.db')\n",
-    "df = pd.read_sql_query(\"SELECT * FROM clasified_messages\", engine)\n",
-    "df.head(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# features\n",
-    "feature_columns = df.columns[~df.columns.isin(['id','original','genre'])]\n",
-    "X = df[feature_columns]\n",
-    "# target\n",
-    "Y = df['message']"
+    "# load data from database\n",
+    "def load_data():\n",
+    "    '''\n",
+    "        input: none\n",
+    "        output: dataset read split in \n",
+    "            - X: features\n",
+    "            - y: target\n",
+    "        Description:\n",
+    "            Reads the DisasterResponse.db file and splits it into features and target for further processing.\n",
+    "        NOTES: Depending on which is your working directory you may need to adjust the relative path to the file.\n",
+    "    ''' \n",
+    "    try: \n",
+    "        engine = sqla.create_engine('sqlite:///Disaster-response-pipelines/data/DisasterResponse.db')\n",
+    "    except:\n",
+    "        engine = sqla.create_engine('sqlite:///../data/DisasterResponse.db')\n",
+    "    df = pd.read_sql_query(\"SELECT * FROM clasified_messages\", engine)\n",
+    "    \n",
+    "    # features\n",
+    "    feature_columns = df.columns[~df.columns.isin(['id','original','message','genre'])]\n",
+    "    X = df['message'].values\n",
+    "    # target\n",
+    "    y = df[feature_columns].values\n",
+    "\n",
+    "    return X, y\n"
    ]
   },
   {
@@ -86,13 +101,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "def tokenize(text):\n",
-    "    list_tokens = nltk.word_tokenize(text)\n",
-    "    pass"
+    "    '''\n",
+    "        input: A string of text\n",
+    "        output: a cleaned list of words\n",
+    "        \n",
+    "        description: Given a \"text\", it will:\n",
+    "            - lower case all words\n",
+    "            - replace url's (if there are any) for a place holder word\n",
+    "            - split into words\n",
+    "            - lemmatize each word (remove variations of endings on words)\n",
+    "            - remove spaces\n",
+    "    '''\n",
+    "    url_regex = 'http[s]?://(?:[a-zA-Z]|[0-9]|[$-_@.&+]|[!*\\(\\),]|(?:%[0-9a-fA-F][0-9a-fA-F]))+'\n",
+    "    detected_urls = re.findall(url_regex, text)\n",
+    "    for url in detected_urls:\n",
+    "        text = text.replace(url, \"urlplaceholder\")\n",
+    "\n",
+    "    tokens = nltk.word_tokenize(text)\n",
+    "    lemmatizer = nltk.WordNetLemmatizer()\n",
+    "\n",
+    "    clean_tokens = []\n",
+    "    for tok in tokens:\n",
+    "        clean_tok = lemmatizer.lemmatize(tok).lower().strip()\n",
+    "        clean_tokens.append(clean_tok)\n",
+    "\n",
+    "    return clean_tokens"
    ]
   },
   {
@@ -105,12 +143,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pipeline = tokenize(\"hola caracola\")\n",
-    "pipeline"
+    "pipeline = Pipeline([\n",
+    "        ('vect', CountVectorizer(tokenizer=tokenize)),\n",
+    "        ('tfidf', TfidfTransformer()),\n",
+    "        ('clf', MultiOutputClassifier(RandomForestClassifier())),\n",
+    "    ])"
    ]
   },
   {
@@ -124,10 +165,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "/Users/nomopix/anaconda3/envs/py3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n/Users/nomopix/anaconda3/envs/py3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n/Users/nomopix/anaconda3/envs/py3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n/Users/nomopix/anaconda3/envs/py3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n/Users/nomopix/anaconda3/envs/py3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n/Users/nomopix/anaconda3/envs/py3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n/Users/nomopix/anaconda3/envs/py3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n/Users/nomopix/anaconda3/envs/py3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n/Users/nomopix/anaconda3/envs/py3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n/Users/nomopix/anaconda3/envs/py3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n/Users/nomopix/anaconda3/envs/py3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n/Users/nomopix/anaconda3/envs/py3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n/Users/nomopix/anaconda3/envs/py3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n/Users/nomopix/anaconda3/envs/py3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n/Users/nomopix/anaconda3/envs/py3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n/Users/nomopix/anaconda3/envs/py3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n/Users/nomopix/anaconda3/envs/py3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n/Users/nomopix/anaconda3/envs/py3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n/Users/nomopix/anaconda3/envs/py3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n/Users/nomopix/anaconda3/envs/py3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n/Users/nomopix/anaconda3/envs/py3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n/Users/nomopix/anaconda3/envs/py3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n/Users/nomopix/anaconda3/envs/py3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n/Users/nomopix/anaconda3/envs/py3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n/Users/nomopix/anaconda3/envs/py3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n/Users/nomopix/anaconda3/envs/py3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n/Users/nomopix/anaconda3/envs/py3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n/Users/nomopix/anaconda3/envs/py3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n/Users/nomopix/anaconda3/envs/py3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n/Users/nomopix/anaconda3/envs/py3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n/Users/nomopix/anaconda3/envs/py3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n/Users/nomopix/anaconda3/envs/py3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n/Users/nomopix/anaconda3/envs/py3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n/Users/nomopix/anaconda3/envs/py3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n/Users/nomopix/anaconda3/envs/py3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n/Users/nomopix/anaconda3/envs/py3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n"
+    },
+    {
+     "data": {
+      "text/plain": "Pipeline(memory=None,\n     steps=[('vect', CountVectorizer(analyzer='word', binary=False, decode_error='strict',\n        dtype=<class 'numpy.int64'>, encoding='utf-8', input='content',\n        lowercase=True, max_df=1.0, max_features=None, min_df=1,\n        ngram_range=(1, 1), preprocessor=None, stop_words=None,\n        strip..._score=False, random_state=None, verbose=0,\n            warm_start=False),\n           n_jobs=None))])"
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X, y = load_data()\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y)\n",
+    "pipeline.fit(X_train, y_train)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -139,10 +198,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "Average overall accuracy 94.21% \n\nF1 score (custom definition) 92.34%\n\n"
+    }
+   ],
+   "source": [
+    "y_pred = pipeline.predict(X_test)\n",
+    "\n",
+    "\n",
+    "def multioutput_fscore(y_true,y_pred,beta=1):\n",
+    "    score_list = []\n",
+    "    if isinstance(y_pred, pd.DataFrame) == True:\n",
+    "        y_pred = y_pred.values\n",
+    "    if isinstance(y_true, pd.DataFrame) == True:\n",
+    "        y_true = y_true.values\n",
+    "    for column in range(0,y_true.shape[1]):\n",
+    "        score = fbeta_score(y_true[:,column],y_pred[:,column],beta,average='weighted')\n",
+    "        score_list.append(score)\n",
+    "    f1score_numpy = np.asarray(score_list)\n",
+    "    f1score_numpy = f1score_numpy[f1score_numpy<1]\n",
+    "    f1score = gmean(f1score_numpy)\n",
+    "    return  f1score\n",
+    "\n",
+    "multi_f1 = multioutput_fscore(y_test,y_pred, beta = 1)\n",
+    "overall_accuracy = (y_pred == y_test).mean().mean()\n",
+    "\n",
+    "print('Average overall accuracy {0:.2f}% \\n'.format(overall_accuracy*100))\n",
+    "print('F1 score (custom definition) {0:.2f}%\\n'.format(multi_f1*100))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -242,7 +330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
